# zrive-ds-1q24-industry-classification

./: .gitignore  .pyproject.toml.swp  README.md  app.py  pyproject.toml  results.ipynb
exploratory/ernesto/: scraping.ipynb
models/: model.txt  tfidf_baseline.py
notebooks/: classification_3_digits.ipynb  classification_binarized.ipynb  classification_binarized_oscar.ipynb  classification_playground.ipynb  data_augmentation_claude_ernesto.ipynb  data_multilabel.ipynb  data_naics_description_exploration_ernesto.ipynb  data_naics_scraping_ernesto.ipynb  eda_all_databases_oscar.ipynb  model_baseline_tfidf_ernesto.ipynb  model_distilbert_oscar.ipynb  model_selection.ipynb  model_tfidf_binary.ipynb  naics_classification_model.h5  quick_eda_felix.ipynb  viz_tfidf_baseline_ernesto.ipynb
src/: BASES_DATOS_OSCAR.ipynb
src/data/: naics_web_scraping.py
src/features/: synthetic_data.py
src/models/: DF_COVERWALLET_CREATION.py  classification_synthetic_no_cv.py  classification_synthetic_no_cv_frozen.py  classification_synthetic_with_cv.py  classification_with_cv_frozen.py  data_augmentation.py  data_multilabel.py  df_coverwallet_creation.py  final_models.py  noise_conclutions.py  prueba2.ipynb  tfidf_baseline.py  tfidf_binary.py
src/module_1/: BASES_DE_DATOS_EDU.ipynb  BERT_ANALYSIS.ipynb  BERT_ANALYSIS_2.ipynb  CREACION_DF_COVERWALLET.ipynb  DF_COVERWALLET.py
