[tool.poetry]
name = "zrive-ds"
version = "0.1.0"
description = "Project for the program Zrive Applied Data Science"
authors = ["Guille Barquero <gb@zriveapp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
numpy = "^1.25.2"




requests = "^2.31.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest = "^7.4.0"
scikit-learn = "^1.4.1.post1"

openpyxl = "^3.1.2"
datasets = "^2.18.0"
transformers = "^4.39.3"
torch = "^2.2.2"
tabulate = "^0.9.0"
torchvision = "^0.17.2"

ipykernel = "^6.29.3"
beautifulsoup4 = "^4.12.3"
pyarrow = "^15.0.2"

openpyxl = "^3.1.2"
spacy = "^3.7.4"



[tool.poetry.group.dev.dependencies]
deptry = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
